--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
@@ -11,5 +13,8 @@
   "dependencies": {
     "@inertiajs/vue3": "^1.2.0",
     "vue": "^3.4.29"
+  },
+  "scripts": {
+    "commitlint": "commitlint --edit"
   }
 }
